# typhe

./: .gitignore  README.md  pyproject.toml  test.py
src/lowpy.egg-info/: PKG-INFO  SOURCES.txt
src/typhe.egg-info/: SOURCES.txt
